# WatchLog

./: .gitignore  CMakeLists.txt  CusSwitch.qml  CustomButton.qml  Expandable.qml  FileBrowser.qml  FileWatcher.cpp  FileWatcher.h  Main.qml  Manager.cpp  Manager.h  Monitor.cpp  Monitor.h  MonitorPage.qml  Notifier.cpp  Notifier.h  NotifierOptions.qml  NotifierPreview.qml  README.md  SaveButton.qml  SystemMedia.cpp  SystemMedia.h  Tab.qml  TrayIcon.cpp  TrayIcon.h  Utils.cpp  assets.qrc  main.cpp  qml.qrc
assets/: version.rc  watchlog.rc
examples/Fall Guys log monitor/: data.json
qml/: AboutPage.qml  CusSwitch.qml  CustomButton.qml  CustomComboBox.qml  CustomDialog.qml  CustomMenu.qml  CustomMenuItem.qml  CustomTextField.qml  Expandable.qml  FileBrowser.qml  FilledButton.qml  HomePage.qml  LabelSeparator.qml  Main.qml  MaterialCheckBox.qml  MonitorPage.qml  Notifier.qml  NotifierOptions.qml  NotifierPreview.qml  SaveButton.qml  Sidebar.qml  Tab.qml
src/: ExitDialog.cpp  ExitDialog.h  FileChangeWorker.cpp  FileChangeWorker.h  FileCheckWorker.cpp  FileCheckWorker.h  FileChecker.cpp  FileChecker.h  FileStatus.cpp  FileStatus.h  FileWatcher.cpp  FileWatcher.h  Manager.cpp  Manager.h  Monitor.cpp  Monitor.h  MonitorCollection.cpp  MonitorCollection.h  MultiDirMonitor.cpp  MultiDirMonitor.h  Notifier.cpp  Notifier.h  NotifierList.cpp  NotifierList.h  Registry.cpp  Registry.h  Settings.cpp  Settings.h  SingleDirMonitor.cpp  SingleDirMonitor.h  SystemMedia.cpp  SystemMenuEventFilter.h  ToastHandler.h  TrayIcon.cpp  TrayIcon.h  Utils.cpp  Utils.h  WinFileManager.cpp  WinFileManager.h  WinFileMonitor.cpp  (+2 more)
